change font size of title and desc

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <h1 align="center">Technology and Livelihood Education</h1>
+        <h1 class="title" align="center">Technology and Livelihood Education</h1>
         <hr size="6px" color="black">
 
         <div class="grid-container">
