fix grammatical error in first item

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="grid-container">
             <div class="grid-item">
                 <img src="computer.jpeg" alt="computer">
-                <div class="desc">"The guy sitting on his desk and starting to learn about HTML structure"</div>
+                <div class="desc">"The guy is sitting on his desk and is starting to learn about the HTML structure"</div>
             </div>
             <div class="grid-item">
                 <img src="computer.jpeg" alt="computer">
