add missing slash in closing tag head

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="grid-item">
                 <img src="computer.jpeg" alt="computer">
-                <div class="desc">"Once you've added the necessary metadata, close the head section by typing &lthead&gt"</div>
+                <div class="desc">"Once you've added the necessary metadata, close the head section by typing &lt/head&gt"</div>
             </div>
             <div class="grid-item">
                 <img src="computer.jpeg" alt="computer">
